--- a/MQX/View/CameraTool/YNCCameraToolView.xib
+++ b/MQX/View/CameraTool/YNCCameraToolView.xib
@@ -15,6 +15,18 @@
             <rect key="frame" x="0.0" y="0.0" width="50" height="185"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hNJ-oe-xSF">
+                    <rect key="frame" x="10" y="0.0" width="30" height="33"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="33" id="I3C-36-xyy"/>
+                        <constraint firstAttribute="width" constant="30" id="gbe-eY-7uf"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <state key="normal" image="btn_switch_photoMode_disable"/>
+                    <connections>
+                        <action selector="clickCameraSwitchModeButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="OwK-uH-wWK"/>
+                    </connections>
+                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AnK-Dv-JrQ">
                     <rect key="frame" x="0.0" y="45" width="50" height="50"/>
                     <constraints>
@@ -22,6 +34,7 @@
                         <constraint firstAttribute="height" constant="50" id="qJP-7E-bH2"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <state key="normal" image="btn_takePhoto_disable"/>
                     <connections>
                         <action selector="clickCameraOperateButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="Twc-yf-u6d"/>
                     </connections>
@@ -32,6 +45,7 @@
                         <constraint firstAttribute="width" constant="30" id="4s3-zA-Ywn"/>
                         <constraint firstAttribute="height" constant="30" id="KOb-IM-Iys"/>
                     </constraints>
+                    <state key="normal" image="btn_cameraSetting_connected"/>
                     <connections>
                         <action selector="clickCameraSettingButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="jYn-TO-dcE"/>
                     </connections>
@@ -42,19 +56,9 @@
                         <constraint firstAttribute="width" constant="30" id="73o-19-h5x"/>
                         <constraint firstAttribute="height" constant="30" id="iE1-HT-zfZ"/>
                     </constraints>
+                    <state key="normal" image="btn_drone_gallery_disconnected"/>
                     <connections>
                         <action selector="clickGalleryButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="8ic-dF-iMK"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hNJ-oe-xSF">
-                    <rect key="frame" x="10" y="0.0" width="30" height="33"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="33" id="I3C-36-xyy"/>
-                        <constraint firstAttribute="width" constant="30" id="gbe-eY-7uf"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <connections>
-                        <action selector="clickCameraSwitchModeButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="OwK-uH-wWK"/>
                     </connections>
                 </button>
             </subviews>
@@ -80,4 +84,10 @@
             <point key="canvasLocation" x="-68" y="25"/>
         </view>
     </objects>
+    <resources>
+        <image name="btn_cameraSetting_connected" width="30" height="30"/>
+        <image name="btn_drone_gallery_disconnected" width="30" height="30"/>
+        <image name="btn_switch_photoMode_disable" width="30" height="30"/>
+        <image name="btn_takePhoto_disable" width="50" height="50"/>
+    </resources>
 </document>
