--- a/MQX/View/CameraTool/cameraSetting/YNCCameraSettingFooterView.xib
+++ b/MQX/View/CameraTool/cameraSetting/YNCCameraSettingFooterView.xib
@@ -6,20 +6,49 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="YNCCameraSettingFooterView">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="85"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="132"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdV-Yq-RoX" userLabel="Format Btn">
-                    <rect key="frame" x="10" y="49" width="275" height="30"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vmd-M2-ZbI">
+                    <rect key="frame" x="10" y="11" width="33" height="16"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="Xm1-BJ-p7H"/>
+                        <constraint firstAttribute="height" constant="16" id="bXR-x4-M15"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="6fs-6m-XQV">
+                    <rect key="frame" x="333" y="1" width="49" height="31"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="47" id="GcQ-3q-LMn"/>
+                        <constraint firstAttribute="height" constant="31" id="hiw-H3-JDd"/>
+                    </constraints>
+                    <connections>
+                        <action selector="changeVideoDirectionSwitch:" destination="iN0-l3-epB" eventType="valueChanged" id="l33-Ns-fwg"/>
+                    </connections>
+                </switch>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6su-qv-Jeq" userLabel="Reset Btn">
+                    <rect key="frame" x="10" y="55" width="375" height="33"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="33" id="tCA-ne-fV8"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="resetBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="adm-zw-uvy"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdV-Yq-RoX" userLabel="Format Btn">
+                    <rect key="frame" x="10" y="95" width="278" height="33"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="33" id="90Y-gp-xu8"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <state key="normal">
@@ -29,42 +58,41 @@
                         <action selector="formatBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="adl-a1-13V"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6su-qv-Jeq" userLabel="Reset Btn">
-                    <rect key="frame" x="10" y="5" width="375" height="33"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <state key="normal" title="Button"/>
-                    <connections>
-                        <action selector="resetBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="adm-zw-uvy"/>
-                    </connections>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FnW-UV-C5B" userLabel="Status Label">
-                    <rect key="frame" x="285" y="55" width="95" height="18"/>
+                    <rect key="frame" x="288" y="105" width="98" height="14"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="95" id="CaJ-od-uoz"/>
+                        <constraint firstAttribute="height" constant="14" id="8UT-zC-orv"/>
+                        <constraint firstAttribute="width" constant="98" id="Oh7-j6-lYk"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="FnW-UV-C5B" firstAttribute="centerY" secondItem="xdV-Yq-RoX" secondAttribute="centerY" id="6gp-t1-adc"/>
-                <constraint firstItem="6su-qv-Jeq" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="0.5" id="Nb4-OB-kgY"/>
-                <constraint firstItem="xdV-Yq-RoX" firstAttribute="leading" secondItem="6su-qv-Jeq" secondAttribute="leading" id="R7D-wq-nQf"/>
-                <constraint firstItem="FnW-UV-C5B" firstAttribute="leading" secondItem="xdV-Yq-RoX" secondAttribute="trailing" id="Rds-2q-9cV"/>
-                <constraint firstAttribute="trailing" secondItem="FnW-UV-C5B" secondAttribute="trailing" constant="10" id="S3X-27-MMb"/>
-                <constraint firstItem="6su-qv-Jeq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="bQ1-Ue-btX"/>
-                <constraint firstAttribute="trailing" secondItem="6su-qv-Jeq" secondAttribute="trailing" constant="5" id="fen-4o-175"/>
-                <constraint firstItem="xdV-Yq-RoX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="1.5" id="vL5-Ht-yw9"/>
+                <constraint firstItem="Vmd-M2-ZbI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="9g3-Vh-Nqc"/>
+                <constraint firstAttribute="trailing" secondItem="6fs-6m-XQV" secondAttribute="trailing" constant="10" id="9vy-pD-le0"/>
+                <constraint firstItem="xdV-Yq-RoX" firstAttribute="top" secondItem="6su-qv-Jeq" secondAttribute="bottom" constant="7" id="Sez-cA-Mw2"/>
+                <constraint firstItem="xdV-Yq-RoX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="Shr-T4-qYd"/>
+                <constraint firstAttribute="bottom" secondItem="FnW-UV-C5B" secondAttribute="bottom" constant="13" id="XKM-JR-qDQ"/>
+                <constraint firstItem="6su-qv-Jeq" firstAttribute="top" secondItem="Vmd-M2-ZbI" secondAttribute="bottom" constant="28" id="e2J-JM-1pA"/>
+                <constraint firstItem="6fs-6m-XQV" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="1" id="gl0-77-TKL"/>
+                <constraint firstItem="6su-qv-Jeq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="rIf-qP-BJB"/>
+                <constraint firstItem="FnW-UV-C5B" firstAttribute="leading" secondItem="xdV-Yq-RoX" secondAttribute="trailing" id="rvb-YK-hCN"/>
+                <constraint firstItem="FnW-UV-C5B" firstAttribute="centerY" secondItem="xdV-Yq-RoX" secondAttribute="centerY" id="sWh-jB-pNS"/>
+                <constraint firstAttribute="trailing" secondItem="FnW-UV-C5B" secondAttribute="trailing" constant="4" id="xNf-rz-4ik"/>
+                <constraint firstAttribute="trailing" secondItem="6su-qv-Jeq" secondAttribute="trailing" constant="5" id="xwe-eJ-mTb"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="formatBtn" destination="xdV-Yq-RoX" id="yNb-Fz-1Ih"/>
                 <outlet property="resetBtn" destination="6su-qv-Jeq" id="Jlb-Zg-3pL"/>
                 <outlet property="statusLabel" destination="FnW-UV-C5B" id="L4p-6u-ZZQ"/>
+                <outlet property="videoDirectionLabel" destination="Vmd-M2-ZbI" id="mPb-4r-02E"/>
+                <outlet property="videoDirectionSwitch" destination="6fs-6m-XQV" id="LAK-LC-aW7"/>
             </connections>
-            <point key="canvasLocation" x="-17" y="-221.5"/>
+            <point key="canvasLocation" x="-17" y="-256"/>
         </view>
     </objects>
 </document>
