--- a/MQX/View/CameraTool/cameraSetting/YNCCameraSettingModeCell.xib
+++ b/MQX/View/CameraTool/cameraSetting/YNCCameraSettingModeCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -55,8 +55,10 @@
                     <constraint firstItem="cA8-i6-TnK" firstAttribute="leading" secondItem="xQU-CK-SQN" secondAttribute="trailing" id="w1w-Vo-yWW"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="itemLabel" destination="fZO-gu-lpS" id="mB1-7p-WLF"/>
+                <outlet property="rightArrowImageView" destination="cA8-i6-TnK" id="0C0-lV-jEI"/>
                 <outlet property="statusLabel" destination="xQU-CK-SQN" id="u5v-mQ-vz7"/>
             </connections>
             <point key="canvasLocation" x="-116" y="52"/>
