--- a/MQX/View/DroneGallery/YNCDroneNavigationView.xib
+++ b/MQX/View/DroneGallery/YNCDroneNavigationView.xib
@@ -65,7 +65,7 @@
                         <constraint firstAttribute="height" constant="30" id="ZsW-fN-JeI"/>
                         <constraint firstAttribute="width" constant="30" id="woq-H7-bc6"/>
                     </constraints>
-                    <state key="normal" title="Button" image="btn_back"/>
+                    <state key="normal" image="btn_back"/>
                     <connections>
                         <action selector="backBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Wrv-YV-mDV"/>
                     </connections>
