--- a/MQX/View/TableViewCell/setting/WTAboutInfoCell.xib
+++ b/MQX/View/TableViewCell/setting/WTAboutInfoCell.xib
@@ -11,42 +11,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="51" id="T4h-fV-9Ax" customClass="YNCAboutInfoCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="51"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="51" id="T4h-fV-9Ax" customClass="WTAboutInfoCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="T4h-fV-9Ax" id="4kR-tF-OZr">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="50.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="49.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caa-g4-vze" userLabel="leftLabel">
-                        <rect key="frame" x="100" y="0.0" width="92.5" height="50.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zE3-XA-6OM" userLabel="rightLabel">
-                        <rect key="frame" x="207.5" y="0.0" width="92.5" height="50.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="--" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zE3-XA-6OM" userLabel="rightLabel">
+                        <rect key="frame" x="220" y="0.0" width="100" height="49.5"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caa-g4-vze" userLabel="leftLabel">
+                        <rect key="frame" x="5" y="0.0" width="215" height="49.5"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="caa-g4-vze" firstAttribute="top" secondItem="4kR-tF-OZr" secondAttribute="top" id="C0C-df-Ejd"/>
-                    <constraint firstItem="zE3-XA-6OM" firstAttribute="top" secondItem="4kR-tF-OZr" secondAttribute="top" id="H2w-2g-5qD"/>
-                    <constraint firstItem="zE3-XA-6OM" firstAttribute="width" secondItem="caa-g4-vze" secondAttribute="width" id="R70-o1-T5P"/>
-                    <constraint firstAttribute="trailing" secondItem="zE3-XA-6OM" secondAttribute="trailing" constant="20" id="Tfy-O0-1pD"/>
-                    <constraint firstItem="caa-g4-vze" firstAttribute="leading" secondItem="4kR-tF-OZr" secondAttribute="leading" constant="100" id="XU7-ri-gb0"/>
-                    <constraint firstAttribute="bottom" secondItem="caa-g4-vze" secondAttribute="bottom" id="b9L-Li-aZo"/>
-                    <constraint firstAttribute="bottom" secondItem="zE3-XA-6OM" secondAttribute="bottom" id="cQp-el-V3C"/>
-                    <constraint firstItem="zE3-XA-6OM" firstAttribute="leading" secondItem="caa-g4-vze" secondAttribute="trailing" constant="15" id="qEM-hf-qu7"/>
-                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="versionNumberLabel" destination="zE3-XA-6OM" id="GBl-Bw-1ed"/>
                 <outlet property="versionTypeLabel" destination="caa-g4-vze" id="TlW-Vi-UGq"/>
             </connections>
-            <point key="canvasLocation" x="-59" y="49"/>
+            <point key="canvasLocation" x="-59" y="48.5"/>
         </tableViewCell>
     </objects>
 </document>
